OAK-11317 :removed usage of ImmutableSet from guava